# bh26

./: .gitignore
backend/: main.py  pyproject.toml
backend/agents/: foodbank_agent.py  household_agent.py  signal_risk_agent.py
backend/data/: event_taxonomy.json  food_signal_weights.json  foodbank_rules.json  groceries.json  grocery_signal_map.json  impact_assumptions.json  query_library.json  substitutions.json
backend/db/: crud.py  database.py  test_mongo.py
backend/routes/: foodbank.py  household.py  pipeline.py
backend/scripts/: extract_signals_once.py  fetch_news.py  recompute_risks.py
backend/services/: embedding_service.py  foodbank_agent.py  household_agent.py  impact_service.py  json_loader.py  news_service.py  risk_engine.py  signal_risk_agent.py
backend/utils/: hashing.py  scoring.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/foodbank/: page.tsx
frontend/src/app/household/: page.tsx
frontend/src/components/: BreakingNewsSimulator.tsx  CollectiveImpactSection.tsx  GroceryInput.tsx  Header.tsx  ResilienceScoreCard.tsx  RiskCard.tsx
frontend/src/context/: DataContext.tsx
frontend/src/data/: simulated_headlines.json
frontend/src/lib/: api.ts  constants.ts  types.ts
