[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "google>=3.0.0",
    "google-generativeai>=0.8.6",
    "pymongo>=4.16.0",
    "uagents>=0.24.0",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "db*", "utils*", "agents*", "routes*"]
